# GeekBrainsAlgorithms

./: CMakeLists.txt  main.c
homework1/: automorphic_numbers.c  automorphic_numbers.h  average.c  average.h  math.c  math.h  max_number.c  max_number.h  random.c  random.h
homework2/: executor_calc.c  executor_calc.h  pow.c  pow.h
homework3/: search.c  search.h  sort.c  sort.h
homework4/: knight.c  knight.h
homework5/: brackets.c  brackets.h  rpn.c  rpn.h
homework6/: btree.c  btree.h  data.txt  hash.c  hash.h
homework7/: graph.c  graph.h  matrix.tsv
